# codex-slack-agent

./: .gitignore  AGENTS.md  README.md  setup.md  slack-app-manifest.yaml
.github/workflows/: deploy.yml
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/functions/: slack-events.ts
infra/lib/: github-actions-deploy.ts  slack-codex-stack.ts
infra/scripts/: invoke-test.ts
infra/test/: github-actions-deploy.test.ts  slack-events.test.ts  stack.test.ts
runtime/: .dockerignore  Dockerfile  pyproject.toml
runtime/src/slack_codex/: __init__.py  agent.py  app.py  gateway_auth.py  github_app.py  local_test.py  models.py  prompt.md  secrets.py  settings.py  slack_client.py  state.py  test_slack_client.py  web_fetch.py  workspace.py
runtime/src/slack_codex/tools/: __init__.py  code_tools.py  slack_tools.py
runtime/tests/: test_agent.py  test_app.py  test_code_tools.py  test_gateway_auth.py  test_github_app.py  test_slack_client.py  test_slack_status.py  test_slack_tools.py  test_state.py  test_test_slack_client.py  test_web_fetch.py  test_web_fetch_live.py  test_workspace.py
