[project]
name = "slack-codex-runtime"
version = "0.1.0"
description = "Slack-triggered OpenAI Agents SDK runtime for Amazon Bedrock AgentCore"
requires-python = ">=3.12,<3.15"
dependencies = [
  "bedrock-agentcore>=1.18.0,<2",
  "boto3>=1.42.0,<2",
  "httpx>=0.28.1,<1",
  "openai-agents>=0.18.2,<0.19",
  "openai[bedrock]>=2.45.0,<3",
  "pyjwt[crypto]>=2.10.1,<3",
  "pydantic>=2.12.0,<3",
]

[project.scripts]
github-app-credential = "slack_codex.github_app:credential_main"
github-app-token = "slack_codex.github_app:token_main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.2.0,<2",
  "ruff>=0.12.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_codex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
